--- a/css/styl.css
+++ b/css/styl.css
@@ -98,9 +98,9 @@ body {
         #header .content #nav li a {
           color: #fff;
           opacity: 0.6;
-          font-size: 22px;
+          font-size: 24px;
           text-decoration: none;
-          font-family: 'Alegreya'; }
+          font-family: 'Bubblegum Sans', cursive; }
         #header .content #nav li a.active {
           color: #fff;
           opacity: 1;
