--- a/css/styl.scss
+++ b/css/styl.scss
@@ -114,9 +114,9 @@ body {
         a {
           color: #fff;
           opacity:0.6;
-          font-size: 22px;
+          font-size: 24px;
           text-decoration: none;
-          font-family: 'Alegreya';
+          font-family: 'Bubblegum Sans', cursive;
         }
         a.active {
           color: #fff;
